# Podstawy-Programowania

./: .gitignore  CMakeLists.txt  WIP.c  workspace
1. Wprowadzanie i wyswietlanie danych/: 10.Dzialania_II.c  11.Pobieranie_i_wyswietlanie_liczby_calkowitej.c  12.Pobieranie_i_wyswietlanie_liczby_rzeczywistej.c  13.Prosty_kalkulator_na_liczbach_calkowitych.c  14.Prosty_kalkulator_na_liczbach_rzeczywistych.c  15.Liczby_zespolone.c  16.Dlugosc_wektora.c  17.Wartosc_srednia_z_licz_calkowitych.c  18.Wartosc_srednia_z_liczb_rzeczywistych.c  19.Wartosc_funkcji.c  2.Piec_wyrazow_I.c  20.Trojkat.c  21.Temperatura.c  22.Wyswietlanie_liczby_z_zadana_dokladnoscia.c  24.Prostokat.c  25.Numer_telefonu.c  26.Data.c  27.Liczby_zespolone.c  28.Wartosc_maksymalna.c  29.Wartosc_maksymalna_i_minimalna.c  3.Piec_wyrazow_II.c  30.Zegar.c  4.Piec_wyrazow_III.c  5.Trzy_liczby.c  6.Wyswietl_liczbe_I.c  9.Dzialania_I.c
1. Wprowadzanie i wyświetlanie danych/: 12.Pobieranie_i_wyswietlanie_liczby_rzeczywistej.c  15.Liczby_zespolone  17.Wartość_średnia_z_licz_całkowitych.c  21.Temperatura.c  22.Wyświetlanie_liczby_z_zadaną_dokładnością.c  23.Liczby_trzycyfrowe.c  26.Data.c  28.Wartość_maksymalna.c  29.Wartość_maksymalna_i_minimalna.c  30.Zegar.c  test.c
10.Wskazniki i tablice/: 11.Przesuniecie_elementow_wektora.c  my_utils.h  vector_utils.h
2. Instrukcje wakunkowe, wyboru switch .. case/: 1.Dwie_liczby_calkowite.c  1.Dwie_liczby_całkowite.c  10.Prosty_kalkulator_float_II.c  11.Liczby_slownie.c  12.Rownanie_kwadratowe.c  13.Min,_max,_srednia_5.c  14.Min,_max,_srednia_max_5.c  14.Min,_max,_średnia_max_5.c  15.Sprawdzanie_tozsamosci.c  15.Sprawdzanie_tożsamości.c  16.Sprawdzanie_wartosci_liczby.c  16.Sprawdzanie_wartości_liczby.c  17.Wartosc_funkcji_II.c  18.Wyświetlanie_oceny.c  19.Zmiana_na_wielkie_litery.c  2.Numer_telefonu.c  (+23 more)
(+380 files in other folders)
